# aplicativos_fiscal

./: .gitignore  .pre-commit-config.yaml  README.md  aplicativos_fiscal.spec  main.py  mkdocs.yml  pyproject.toml  requirements.txt  resources.qrc  resources_rc.py  settings_exemple.ini
.github/workflows/: build.yml
docs/: index.md
docs/impostos/: comp_lanc_funrural.md
src/: __init__.py  settings.py
src/core/common/: __init__.py  pydantic_csv.py
src/core/impostos/comp_lanc_funrural/: __init__.py  arquivo_modelo.py  comp_lanc_funrural.py  consulta_nfs_questor.py
src/core/types/: chave_acesso.py
src/core/types/insc_federal/: __init__.py  cnpj.py  cpf.py  outro.py  protocols.py
src/desktop/: __init__.py
src/desktop/screens/ajuda/documentacao/: __init__.py  documentacao.py
src/desktop/screens/configuracoes/questor_db/: __init__.py  questor_db.py  questor_db.ui  questor_db_ui.py
src/desktop/screens/impostos/: __init__.py
src/desktop/screens/impostos/comp_lanc_funrural/: comp_lanc_funrural.py  comp_lanc_funrural.ui  comp_lanc_funrural_ui.py
src/desktop/screens/main/: main.py  main.ui  main_ui.py
src/infraestructure/: __init__.py  loading.py  logging.py
src/settings/: globals.py  questor_db.py
src/utils/: checks.py  encrypt_decrypt.py  path.py
tests/common/: test_pydantic_csv.py
tests/impostos/: test_comp_lanc_funrural.py
